--- a/css/variables.css
+++ b/css/variables.css
@@ -13,7 +13,8 @@
   /* ========================================================================== */
 
   /* Dark Mode (Default) */
-  --background: hsl(220, 39%, 3%); /* Page background */
+  --background: hsl(220, 39%, 10%); /* Page background */
+  --background-quote: hsl(220, 39%, 1%);
   --surface: hsl(200, 7%, 18%); /* Card backgrounds, panels */
   --text-primary: hsl(240, 5%, 88%); /* Main text, headlines */
   --text-secondary: hsl(240, 4%, 65%); /* Secondary text, descriptions */
